--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"symfony/security-csrf": "5.0.*",
 		"symfony/twig-pack": "^1.0",
 		"symfony/validator": "5.0.*",
+		"symfony/webpack-encore-bundle": "^1.11",
 		"symfony/yaml": "5.0.*"
 	},
 	"require-dev" : {
