--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "bootstrap": "^5.0.1",
+    "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   }
