--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bootstrap": "^5.0.1",
     "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
+    "jquery.js": "^0.0.2-security",
     "popper.js": "^1.16.1"
   }
 }
