--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "devDependencies": {
+    "@symfony/webpack-encore": "^1.3.0",
     "bootstrap": "^5.0.1",
     "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.6.0",
     "jquery.js": "^0.0.2-security",
-    "popper.js": "^1.16.1"
+    "node-sass": "^6.0.0",
+    "popper.js": "^1.16.1",
+    "sass-loader": "^11.1.1"
+  },
+  "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@popperjs/core": "^2.9.2",
+    "@symfony/stimulus-bridge": "^2.1.0",
+    "bootswatch": "^5.0.1",
+    "stimulus": "^2.0.0",
+    "webpack-notifier": "^1.13.0"
   }
 }
