--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ APP_SECRET=2289190560a0af81803575288a4229aa
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
