--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"symfony/flex": "^1.3.1",
 		"symfony/form": "5.0.*",
 		"symfony/framework-bundle": "5.0.*",
+		"symfony/mailer": "5.0.*",
 		"symfony/maker-bundle": "^1.19",
 		"symfony/orm-pack": "^1.0",
 		"symfony/security-bundle": "5.0.*",
@@ -20,7 +21,8 @@
 		"symfony/twig-pack": "^1.0",
 		"symfony/validator": "5.0.*",
 		"symfony/webpack-encore-bundle": "^1.11",
-		"symfony/yaml": "5.0.*"
+		"symfony/yaml": "5.0.*",
+		"symfonycasts/reset-password-bundle": "^1.8"
 	},
 	"require-dev" : {
 		"doctrine/doctrine-fixtures-bundle": "^3.3",
