--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
