--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"symfony/orm-pack": "^1.0",
 		"symfony/security-bundle": "5.0.*",
 		"symfony/security-csrf": "5.0.*",
+		"symfony/sendgrid-mailer": "5.0.*",
 		"symfony/twig-pack": "^1.0",
 		"symfony/validator": "5.0.*",
 		"symfony/webpack-encore-bundle": "^1.11",
