--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"symfony/validator": "5.0.*",
 		"symfony/webpack-encore-bundle": "^1.11",
 		"symfony/yaml": "5.0.*",
-		"symfonycasts/reset-password-bundle": "^1.8"
+		"symfonycasts/reset-password-bundle": "^1.8",
+		"symfonycasts/verify-email-bundle": "^1.5"
 	},
 	"require-dev" : {
 		"doctrine/doctrine-fixtures-bundle": "^3.3",
