--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 ###< symfony/mailer ###
 
 ###> symfony/sendgrid-mailer ###
-# MAILER_DSN=sendgrid://KEY@default
+MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
 ###< symfony/sendgrid-mailer ###
