--- a/.env_old
+++ b/.env_old
@@ -25,6 +25,12 @@ APP_SECRET=2289190560a0af81803575288a4229aa
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://alex:@127.0.0.1:3306/SES?serverVersion=5.7
-DATABASE_URL="mysql://ses:ses2020@127.0.0.1:3306/SES"
+DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
