--- a/.env
+++ b/.env
@@ -33,4 +33,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 
 ###> symfony/sendgrid-mailer ###
 MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
+MAILER_URL=smtp://localhost:1025
 ###< symfony/sendgrid-mailer ###
