cosas de mail de confirmacion

--- a/.env
+++ b/.env
@@ -28,10 +28,18 @@ APP_SECRET=2289190560a0af81803575288a4229aa
 DATABASE_URL=mysql://root:@127.0.0.1:3306/SES?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
+MAILER_URL=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> symfony/sendgrid-mailer ###
-MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
-MAILER_URL=smtp://localhost:1025
+#MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
+#MAILER_URL=smtp://localhost:1025
 ###< symfony/sendgrid-mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&password=
+###< symfony/swiftmailer-bundle ###
