--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"symfony/security-bundle": "5.0.*",
 		"symfony/security-csrf": "5.0.*",
 		"symfony/sendgrid-mailer": "5.0.*",
+		"symfony/swiftmailer-bundle": "^3.5",
 		"symfony/twig-pack": "^1.0",
 		"symfony/validator": "5.0.*",
 		"symfony/webpack-encore-bundle": "^1.11",
